fix: update description to name in state_attributes for better clarity

--- a/custom_components/action_result/translations/en.json
+++ b/custom_components/action_result/translations/en.json
@@ -418,7 +418,7 @@
         },
         "state_attributes": {
           "attribution": {
-            "description": "Data from the {integration} integration"
+            "name": "Data from the {integration} integration"
           }
         }
       }
